assets/deployments/qa-technician/qa-technician-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: qa-technician
  name: qa-technician
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: qa-technician
  template:
    metadata:
      labels:
        app: qa-technician
    spec:
      nodeSelector:
        app: app
      containers:
        - image: 279559645400.dkr.ecr.us-west-1.amazonaws.com/solui/quality-technician:G8R2i020
          imagePullPolicy: Always
          name: qa-technician
          ports:
            - containerPort: 5030
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /qa-technician/health
              port: 5030
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources: {}
          volumeMounts:
            - mountPath: /opt/ibaset/solumina-web-quality-technician/config/.env
              name: quality-technician-mount
              subPath: .env
      volumes:
        - name: quality-technician-mount
          configMap:
            name: quality-technician-cm
            defaultMode: 420
            items:
              - key: qualityTechnicianConfig
                path: .env
      restartPolicy: Always
status: {}
