assets/deployments/qa-technician/qa-technician-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    app: qa-technician
  name: qa-technician
spec:
  ports:
  - name: "5030"
    port: 5030
    targetPort: 5030
  selector:
    app: qa-technician
#  externalIPs:
#   - 10.10.9.248
#status:
#  loadBalancer: {}
