assets/deployments/qa-technician/qa-technician-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qa-technician
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-security-policy: "default-src 'self';script-src 'self' 'unsafe-inline';connect-src 'self';img-src 'self' data: blob:;style-src 'self' 'unsafe-inline';media-src 'self' blob: data:;font-src 'self' data:;frame-ancestors 'self';frame-src blob: 'self';object-src 'self' blob:;"
spec:
  rules:
  - host: --DNS_NAME--
    http:
      paths:
      - path: /qa-technician
        backend:
          serviceName: qa-technician
          servicePort: 5030
